Src/ArduinoMexaParser.py
# Generated from ArduinoMexa.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArduinoMexaParser ( Parser ):

    grammarFileName = "ArduinoMexa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PRENDERLED'", "'APAGARLED'", "'LEERSENSOR'", 
                     "'MOVERSERVO'", "'ESPERAR'", "'SI'", "'ENTONCES'", 
                     "'TOCARBUZZER'", "'ESCRIBIRLCD'", "'ENCENDERMOTOR'", 
                     "'APAGARMOTOR'", "'ACTIVARRELE'", "'DESACTIVARRELE'", 
                     "'PRENDERRGB'", "'APAGARRGB'", "'ESTATICO'", "'LOOP'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", 
                     "'*'", "'/'", "'+'", "'-'", "'('", "')'", "','", "';'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "PRENDERLED", "APAGARLED", "LEERSENSOR", 
                      "MOVERSERVO", "ESPERAR", "SI", "ENTONCES", "TOCARBUZZER", 
                      "ESCRIBIRLCD", "ENCENDERMOTOR", "APAGARMOTOR", "ACTIVARRELE", 
                      "DESACTIVARRELE", "PRENDERRGB", "APAGARRGB", "ESTATICO", 
                      "LOOP", "EQ", "NEQ", "LT", "LE", "GT", "GE", "AS", 
                      "MUL", "DIV", "ADD", "SUB", "LPAREN", "RPAREN", "COMMA", 
                      "SEMICOLON", "LBRACE", "RBRACE", "ID", "INT", "STRING", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_bloqueEstatico = 1
    RULE_bloqueLoop = 2
    RULE_sentencia = 3
    RULE_statement = 4
    RULE_prenderled = 5
    RULE_apagarled = 6
    RULE_leersensor = 7
    RULE_moverservo = 8
    RULE_esperar = 9
    RULE_asignacion = 10
    RULE_condicion = 11
    RULE_tocarbuzzer = 12
    RULE_escribirlcd = 13
    RULE_encendermotor = 14
    RULE_apagarmotor = 15
    RULE_activarrele = 16
    RULE_desactivarrele = 17
    RULE_prenderrgb = 18
    RULE_apagarrgb = 19
    RULE_expr = 20
    RULE_termino = 21
    RULE_factor = 22
    RULE_comparador = 23

    ruleNames =  [ "program", "bloqueEstatico", "bloqueLoop", "sentencia", 
                   "statement", "prenderled", "apagarled", "leersensor", 
                   "moverservo", "esperar", "asignacion", "condicion", "tocarbuzzer", 
                   "escribirlcd", "encendermotor", "apagarmotor", "activarrele", 
                   "desactivarrele", "prenderrgb", "apagarrgb", "expr", 
                   "termino", "factor", "comparador" ]

    EOF = Token.EOF
    PRENDERLED=1
    APAGARLED=2
    LEERSENSOR=3
    MOVERSERVO=4
    ESPERAR=5
    SI=6
    ENTONCES=7
    TOCARBUZZER=8
    ESCRIBIRLCD=9
    ENCENDERMOTOR=10
    APAGARMOTOR=11
    ACTIVARRELE=12
    DESACTIVARRELE=13
    PRENDERRGB=14
    APAGARRGB=15
    ESTATICO=16
    LOOP=17
    EQ=18
    NEQ=19
    LT=20
    LE=21
    GT=22
    GE=23
    AS=24
    MUL=25
    DIV=26
    ADD=27
    SUB=28
    LPAREN=29
    RPAREN=30
    COMMA=31
    SEMICOLON=32
    LBRACE=33
    RBRACE=34
    ID=35
    INT=36
    STRING=37
    WS=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloqueEstatico(self):
            return self.getTypedRuleContext(ArduinoMexaParser.BloqueEstaticoContext,0)


        def bloqueLoop(self):
            return self.getTypedRuleContext(ArduinoMexaParser.BloqueLoopContext,0)


        def EOF(self):
            return self.getToken(ArduinoMexaParser.EOF, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArduinoMexaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.bloqueEstatico()
                self.state = 49
                self.bloqueLoop()
                self.state = 50
                self.match(ArduinoMexaParser.EOF)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.bloqueLoop()
                self.state = 53
                self.match(ArduinoMexaParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueEstaticoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESTATICO(self):
            return self.getToken(ArduinoMexaParser.ESTATICO, 0)

        def sentencia(self):
            return self.getTypedRuleContext(ArduinoMexaParser.SentenciaContext,0)


        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_bloqueEstatico

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloqueEstatico" ):
                return visitor.visitBloqueEstatico(self)
            else:
                return visitor.visitChildren(self)




    def bloqueEstatico(self):

        localctx = ArduinoMexaParser.BloqueEstaticoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloqueEstatico)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(ArduinoMexaParser.ESTATICO)
            self.state = 58
            self.sentencia()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(ArduinoMexaParser.LOOP, 0)

        def sentencia(self):
            return self.getTypedRuleContext(ArduinoMexaParser.SentenciaContext,0)


        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_bloqueLoop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloqueLoop" ):
                return visitor.visitBloqueLoop(self)
            else:
                return visitor.visitChildren(self)




    def bloqueLoop(self):

        localctx = ArduinoMexaParser.BloqueLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloqueLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ArduinoMexaParser.LOOP)
            self.state = 61
            self.sentencia()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoMexaParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArduinoMexaParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoMexaParser.SEMICOLON)
            else:
                return self.getToken(ArduinoMexaParser.SEMICOLON, i)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = ArduinoMexaParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sentencia)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self.statement()
                    self.state = 64
                    self.match(ArduinoMexaParser.SEMICOLON)

                else:
                    raise NoViableAltException(self)
                self.state = 68 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StmtMotorOnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def encendermotor(self):
            return self.getTypedRuleContext(ArduinoMexaParser.EncendermotorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtMotorOn" ):
                return visitor.visitStmtMotorOn(self)
            else:
                return visitor.visitChildren(self)


    class StmtMotorOffContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def apagarmotor(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ApagarmotorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtMotorOff" ):
                return visitor.visitStmtMotorOff(self)
            else:
                return visitor.visitChildren(self)


    class StmtLeersensorContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def leersensor(self):
            return self.getTypedRuleContext(ArduinoMexaParser.LeersensorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtLeersensor" ):
                return visitor.visitStmtLeersensor(self)
            else:
                return visitor.visitChildren(self)


    class StmtEsperarContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def esperar(self):
            return self.getTypedRuleContext(ArduinoMexaParser.EsperarContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtEsperar" ):
                return visitor.visitStmtEsperar(self)
            else:
                return visitor.visitChildren(self)


    class StmtApagarledContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def apagarled(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ApagarledContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtApagarled" ):
                return visitor.visitStmtApagarled(self)
            else:
                return visitor.visitChildren(self)


    class StmtAsignacionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def asignacion(self):
            return self.getTypedRuleContext(ArduinoMexaParser.AsignacionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtAsignacion" ):
                return visitor.visitStmtAsignacion(self)
            else:
                return visitor.visitChildren(self)


    class StmtMoverServoContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def moverservo(self):
            return self.getTypedRuleContext(ArduinoMexaParser.MoverservoContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtMoverServo" ):
                return visitor.visitStmtMoverServo(self)
            else:
                return visitor.visitChildren(self)


    class StmtReleOnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def activarrele(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ActivarreleContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtReleOn" ):
                return visitor.visitStmtReleOn(self)
            else:
                return visitor.visitChildren(self)


    class StmtPrenderledContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prenderled(self):
            return self.getTypedRuleContext(ArduinoMexaParser.PrenderledContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtPrenderled" ):
                return visitor.visitStmtPrenderled(self)
            else:
                return visitor.visitChildren(self)


    class StmtCondicionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicion(self):
            return self.getTypedRuleContext(ArduinoMexaParser.CondicionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtCondicion" ):
                return visitor.visitStmtCondicion(self)
            else:
                return visitor.visitChildren(self)


    class StmtReleOffContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def desactivarrele(self):
            return self.getTypedRuleContext(ArduinoMexaParser.DesactivarreleContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtReleOff" ):
                return visitor.visitStmtReleOff(self)
            else:
                return visitor.visitChildren(self)


    class StmtRgbOffContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def apagarrgb(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ApagarrgbContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtRgbOff" ):
                return visitor.visitStmtRgbOff(self)
            else:
                return visitor.visitChildren(self)


    class StmtBuzzerContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tocarbuzzer(self):
            return self.getTypedRuleContext(ArduinoMexaParser.TocarbuzzerContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtBuzzer" ):
                return visitor.visitStmtBuzzer(self)
            else:
                return visitor.visitChildren(self)


    class StmtRgbOnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prenderrgb(self):
            return self.getTypedRuleContext(ArduinoMexaParser.PrenderrgbContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtRgbOn" ):
                return visitor.visitStmtRgbOn(self)
            else:
                return visitor.visitChildren(self)


    class StmtEscribirLCDContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduinoMexaParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def escribirlcd(self):
            return self.getTypedRuleContext(ArduinoMexaParser.EscribirlcdContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtEscribirLCD" ):
                return visitor.visitStmtEscribirLCD(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = ArduinoMexaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ArduinoMexaParser.StmtPrenderledContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.prenderled()
                pass

            elif la_ == 2:
                localctx = ArduinoMexaParser.StmtApagarledContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.apagarled()
                pass

            elif la_ == 3:
                localctx = ArduinoMexaParser.StmtLeersensorContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.leersensor()
                pass

            elif la_ == 4:
                localctx = ArduinoMexaParser.StmtMoverServoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.moverservo()
                pass

            elif la_ == 5:
                localctx = ArduinoMexaParser.StmtEsperarContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.esperar()
                pass

            elif la_ == 6:
                localctx = ArduinoMexaParser.StmtAsignacionContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.asignacion()
                pass

            elif la_ == 7:
                localctx = ArduinoMexaParser.StmtCondicionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.condicion()
                pass

            elif la_ == 8:
                localctx = ArduinoMexaParser.StmtBuzzerContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.tocarbuzzer()
                pass

            elif la_ == 9:
                localctx = ArduinoMexaParser.StmtEscribirLCDContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 78
                self.escribirlcd()
                pass

            elif la_ == 10:
                localctx = ArduinoMexaParser.StmtMotorOnContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 79
                self.encendermotor()
                pass

            elif la_ == 11:
                localctx = ArduinoMexaParser.StmtMotorOffContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 80
                self.apagarmotor()
                pass

            elif la_ == 12:
                localctx = ArduinoMexaParser.StmtReleOnContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 81
                self.activarrele()
                pass

            elif la_ == 13:
                localctx = ArduinoMexaParser.StmtReleOffContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 82
                self.desactivarrele()
                pass

            elif la_ == 14:
                localctx = ArduinoMexaParser.StmtRgbOnContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 83
                self.prenderrgb()
                pass

            elif la_ == 15:
                localctx = ArduinoMexaParser.StmtRgbOffContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 84
                self.apagarrgb()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrenderledContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRENDERLED(self):
            return self.getToken(ArduinoMexaParser.PRENDERLED, 0)

        def LPAREN(self):
            return self.getToken(ArduinoMexaParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoMexaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoMexaParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(ArduinoMexaParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ArduinoMexaParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_prenderled

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrenderled" ):
                return visitor.visitPrenderled(self)
            else:
                return visitor.visitChildren(self)




    def prenderled(self):

        localctx = ArduinoMexaParser.PrenderledContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_prenderled)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(ArduinoMexaParser.PRENDERLED)
            self.state = 88
            self.match(ArduinoMexaParser.LPAREN)
            self.state = 89
            self.expr()
            self.state = 90
            self.match(ArduinoMexaParser.COMMA)
            self.state = 91
            self.expr()
            self.state = 92
            self.match(ArduinoMexaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApagarledContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def APAGARLED(self):
            return self.getToken(ArduinoMexaParser.APAGARLED, 0)

        def LPAREN(self):
            return self.getToken(ArduinoMexaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoMexaParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_apagarled

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApagarled" ):
                return visitor.visitApagarled(self)
            else:
                return visitor.visitChildren(self)




    def apagarled(self):

        localctx = ArduinoMexaParser.ApagarledContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_apagarled)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ArduinoMexaParser.APAGARLED)
            self.state = 95
            self.match(ArduinoMexaParser.LPAREN)
            self.state = 96
            self.expr()
            self.state = 97
            self.match(ArduinoMexaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeersensorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArduinoMexaParser.ID, 0)

        def AS(self):
            return self.getToken(ArduinoMexaParser.AS, 0)

        def LEERSENSOR(self):
            return self.getToken(ArduinoMexaParser.LEERSENSOR, 0)

        def LPAREN(self):
            return self.getToken(ArduinoMexaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoMexaParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_leersensor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeersensor" ):
                return visitor.visitLeersensor(self)
            else:
                return visitor.visitChildren(self)




    def leersensor(self):

        localctx = ArduinoMexaParser.LeersensorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_leersensor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(ArduinoMexaParser.ID)
            self.state = 100
            self.match(ArduinoMexaParser.AS)
            self.state = 101
            self.match(ArduinoMexaParser.LEERSENSOR)
            self.state = 102
            self.match(ArduinoMexaParser.LPAREN)
            self.state = 103
            self.expr()
            self.state = 104
            self.match(ArduinoMexaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoverservoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVERSERVO(self):
            return self.getToken(ArduinoMexaParser.MOVERSERVO, 0)

        def LPAREN(self):
            return self.getToken(ArduinoMexaParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoMexaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoMexaParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(ArduinoMexaParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ArduinoMexaParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_moverservo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoverservo" ):
                return visitor.visitMoverservo(self)
            else:
                return visitor.visitChildren(self)




    def moverservo(self):

        localctx = ArduinoMexaParser.MoverservoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_moverservo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ArduinoMexaParser.MOVERSERVO)
            self.state = 107
            self.match(ArduinoMexaParser.LPAREN)
            self.state = 108
            self.expr()
            self.state = 109
            self.match(ArduinoMexaParser.COMMA)
            self.state = 110
            self.expr()
            self.state = 111
            self.match(ArduinoMexaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EsperarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESPERAR(self):
            return self.getToken(ArduinoMexaParser.ESPERAR, 0)

        def LPAREN(self):
            return self.getToken(ArduinoMexaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoMexaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoMexaParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoMexaParser.RULE_esperar
